name:           Blog
version:        1.0
synopsis:       My web blog
homepage:       http://www-student.cse.buffalo.edu/~muyuanli
license:        OtherLicense
license-file:   LICENSE
author:         Bruce Li
maintainer:     leilmyxwz@gmail.com
category:       Web
build-type:     Simple
cabal-version:  >= 1.8
description:
  Statically generated web blog. 

executable web
  main-is:         Main.hs
  hs-source-dirs:  haskell
  build-depends:   base > 4.6 && < 4.8,
                   containers == 0.5.*,
                   filepath == 1.3.*,
                   blaze-html >= 0.6.0,
                   hakyll == 4.6.*,
                   pandoc == 1.13.*
