name:           Blog
version:        1.0
synopsis:       My web blog
homepage:       http://www-student.cse.buffalo.edu/~muyuanli
license:        OtherLicense
license-file:   LICENSE
author:         Bruce Li
maintainer:     leilmyxwz@gmail.com
category:       Web
build-type:     Simple
cabal-version:  >= 1.8
description:
  Statically generated web blog.

executable blog
  main-is:         Main.hs
  hs-source-dirs:  haskell
  build-depends:   base > 4.6 && < 4.8
                 , blaze-html >= 0.6.0
                 , containers == 0.5.*
                 , filepath == 1.3.*
                 , hakyll == 4.6.*
                 , highlighting-kate == 0.5.*
                 , old-locale >= 1.0.0.5
                 , pandoc == 1.13.*
                 , time >= 1.4.0.1
